# PrEWRunRK

./: .gitignore  CMakeLists.txt  Readme.md
macros/: compile.sh  run_on_cluster.sh
macros/HTCondor_runs/: run_macro.sh  submit_script.submit
notebook/: ResultNotebook.ipynb
source/: main.cpp
